--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon scrape/server.js",
+    "influence": "node scrape/influence.js",
+    "philosophers": "node scrape/philosophers.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.1",
     "express": "^4.15.3",
-    "request": "^2.81.0"
+    "pg": "^6.2.4",
+    "pg-hstore": "^2.3.2",
+    "request": "^2.81.0",
+    "sequelize": "^4.1.0"
   }
 }
