--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "cheerio": "^1.0.0-rc.1",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
     "request": "^2.81.0",
