--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "chalk": "^1.1.3",
     "cheerio": "^1.0.0-rc.1",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
