--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
     "request": "^2.81.0",
-    "sequelize": "^4.1.0"
+    "sequelize": "^4.1.0",
+    "url": "^0.11.0"
   }
 }
